crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@81.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: set enable_indexonlyscan to off;
---
VariableSetStmt@0..32
  Set@0..3 "set"
  Whitespace@3..4 " "
  Ident@4..24 "enable_indexonlyscan"
  Whitespace@24..25 " "
  To@25..27 "to"
  Whitespace@27..28 " "
  AConst@28..31
    Off@28..31 "off"
  Ascii59@31..32 ";"

