crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@82.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: set enable_indexscan to off;
---
VariableSetStmt@0..28
  Set@0..3 "set"
  Whitespace@3..4 " "
  Ident@4..20 "enable_indexscan"
  Whitespace@20..21 " "
  To@21..23 "to"
  Whitespace@23..24 " "
  AConst@24..27
    Off@24..27 "off"
  Ascii59@27..28 ";"

