crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@97.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: set enable_material to off;
---
VariableSetStmt@0..27
  Set@0..3 "set"
  Whitespace@3..4 " "
  Ident@4..19 "enable_material"
  Whitespace@19..20 " "
  To@20..22 "to"
  Whitespace@22..23 " "
  AConst@23..26
    Off@23..26 "off"
  Ascii59@26..27 ";"

