crates/pg_syntax/tests/snapshots/postgres_regress/select_views@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO credit_usage\n       VALUES (101, '2011-09-15', 120),\n\t      (101, '2011-10-05',  90),\n\t      (101, '2011-10-18', 110),\n\t      (101, '2011-10-21', 200),\n\t      (101, '2011-11-10',  80),\n\t      (102, '2011-09-22', 300),\n\t      (102, '2011-10-12', 120),\n\t      (102, '2011-10-28', 200),\n\t      (103, '2011-10-15', 480);"
---
InsertStmt@0..328
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..24
    Ident@12..24 "credit_usage"
  Newline@24..25 "\n"
  Whitespace@25..32 "       "
  SelectStmt@32..326
    Values@32..38 "VALUES"
    Whitespace@38..39 " "
    Ascii40@39..40 "("
    List@40..62
      AConst@40..43
        Iconst@40..43 "101"
      Ascii44@43..44 ","
      Whitespace@44..45 " "
      AConst@45..57
        Sconst@45..57 "'2011-09-15'"
      Ascii44@57..58 ","
      Whitespace@58..59 " "
      AConst@59..62
        Iconst@59..62 "120"
    Ascii41@62..63 ")"
    Ascii44@63..64 ","
    Newline@64..65 "\n"
    Newline@65..66 "\t"
    Whitespace@66..72 "      "
    Ascii40@72..73 "("
    List@73..95
      AConst@73..76
        Iconst@73..76 "101"
      Ascii44@76..77 ","
      Whitespace@77..78 " "
      AConst@78..90
        Sconst@78..90 "'2011-10-05'"
      Ascii44@90..91 ","
      Whitespace@91..93 "  "
      AConst@93..95
        Iconst@93..95 "90"
    Ascii41@95..96 ")"
    Ascii44@96..97 ","
    Newline@97..98 "\n"
    Newline@98..99 "\t"
    Whitespace@99..105 "      "
    Ascii40@105..106 "("
    List@106..128
      AConst@106..109
        Iconst@106..109 "101"
      Ascii44@109..110 ","
      Whitespace@110..111 " "
      AConst@111..123
        Sconst@111..123 "'2011-10-18'"
      Ascii44@123..124 ","
      Whitespace@124..125 " "
      AConst@125..128
        Iconst@125..128 "110"
    Ascii41@128..129 ")"
    Ascii44@129..130 ","
    Newline@130..131 "\n"
    Newline@131..132 "\t"
    Whitespace@132..138 "      "
    Ascii40@138..139 "("
    List@139..161
      AConst@139..142
        Iconst@139..142 "101"
      Ascii44@142..143 ","
      Whitespace@143..144 " "
      AConst@144..156
        Sconst@144..156 "'2011-10-21'"
      Ascii44@156..157 ","
      Whitespace@157..158 " "
      AConst@158..161
        Iconst@158..161 "200"
    Ascii41@161..162 ")"
    Ascii44@162..163 ","
    Newline@163..164 "\n"
    Newline@164..165 "\t"
    Whitespace@165..171 "      "
    Ascii40@171..172 "("
    List@172..194
      AConst@172..175
        Iconst@172..175 "101"
      Ascii44@175..176 ","
      Whitespace@176..177 " "
      AConst@177..189
        Sconst@177..189 "'2011-11-10'"
      Ascii44@189..190 ","
      Whitespace@190..192 "  "
      AConst@192..194
        Iconst@192..194 "80"
    Ascii41@194..195 ")"
    Ascii44@195..196 ","
    Newline@196..197 "\n"
    Newline@197..198 "\t"
    Whitespace@198..204 "      "
    Ascii40@204..205 "("
    List@205..227
      AConst@205..208
        Iconst@205..208 "102"
      Ascii44@208..209 ","
      Whitespace@209..210 " "
      AConst@210..222
        Sconst@210..222 "'2011-09-22'"
      Ascii44@222..223 ","
      Whitespace@223..224 " "
      AConst@224..227
        Iconst@224..227 "300"
    Ascii41@227..228 ")"
    Ascii44@228..229 ","
    Newline@229..230 "\n"
    Newline@230..231 "\t"
    Whitespace@231..237 "      "
    Ascii40@237..238 "("
    List@238..260
      AConst@238..241
        Iconst@238..241 "102"
      Ascii44@241..242 ","
      Whitespace@242..243 " "
      AConst@243..255
        Sconst@243..255 "'2011-10-12'"
      Ascii44@255..256 ","
      Whitespace@256..257 " "
      AConst@257..260
        Iconst@257..260 "120"
    Ascii41@260..261 ")"
    Ascii44@261..262 ","
    Newline@262..263 "\n"
    Newline@263..264 "\t"
    Whitespace@264..270 "      "
    Ascii40@270..271 "("
    List@271..293
      AConst@271..274
        Iconst@271..274 "102"
      Ascii44@274..275 ","
      Whitespace@275..276 " "
      AConst@276..288
        Sconst@276..288 "'2011-10-28'"
      Ascii44@288..289 ","
      Whitespace@289..290 " "
      AConst@290..293
        Iconst@290..293 "200"
    Ascii41@293..294 ")"
    Ascii44@294..295 ","
    Newline@295..296 "\n"
    Newline@296..297 "\t"
    Whitespace@297..303 "      "
    Ascii40@303..304 "("
    List@304..326
      AConst@304..307
        Iconst@304..307 "103"
      Ascii44@307..308 ","
      Whitespace@308..309 " "
      AConst@309..321
        Sconst@309..321 "'2011-10-15'"
      Ascii44@321..322 ","
      Whitespace@322..323 " "
      AConst@323..326
        Iconst@323..326 "480"
  Ascii41@326..327 ")"
  Ascii59@327..328 ";"

