crates/pg_syntax/tests/snapshots/postgres_regress/select_views@12.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE VIEW my_property_normal AS\n       SELECT * FROM customer WHERE name = current_user;"
---
ViewStmt@0..90
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  View@7..11 "VIEW"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "my_property_normal"
  Whitespace@30..31 " "
  As@31..33 "AS"
  Newline@33..34 "\n"
  Whitespace@34..41 "       "
  SelectStmt@41..89
    Select@41..47 "SELECT"
    Whitespace@47..48 " "
    ResTarget@48..49
      ColumnRef@48..49
        AStar@48..49
          Ascii42@48..49 "*"
    Whitespace@49..50 " "
    From@50..54 "FROM"
    Whitespace@54..55 " "
    RangeVar@55..63
      Ident@55..63 "customer"
    Whitespace@63..64 " "
    Where@64..69 "WHERE"
    Whitespace@69..70 " "
    AExpr@70..89
      ColumnRef@70..74
        NameP@70..74 "name"
      Whitespace@74..75 " "
      Ascii61@75..76 "="
      Whitespace@76..77 " "
      SqlvalueFunction@77..89
        CurrentUser@77..89 "current_user"
  Ascii59@89..90 ";"

