crates/pg_syntax/tests/snapshots/postgres_regress/select_views@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM my_property_secure WHERE f_leak(passwd);
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..32
    Ident@14..32 "my_property_secure"
  Whitespace@32..33 " "
  Where@33..38 "WHERE"
  Whitespace@38..39 " "
  FuncCall@39..52
    Ident@39..45 "f_leak"
    Ascii40@45..46 "("
    ColumnRef@46..52
      Ident@46..52 "passwd"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

