crates/pg_syntax/tests/snapshots/postgres_regress/select_views@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM toyemp WHERE name = 'sharon';"
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..20
    Ident@14..20 "toyemp"
  Whitespace@20..21 " "
  Where@21..26 "WHERE"
  Whitespace@26..27 " "
  AExpr@27..42
    ColumnRef@27..31
      NameP@27..31 "name"
    Whitespace@31..32 " "
    Ascii61@32..33 "="
    Whitespace@33..34 " "
    AConst@34..42
      Sconst@34..42 "'sharon'"
  Ascii59@42..43 ";"

